// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt acp --help 1`] = `
"mongolgpt acp

ACP (агент-клиентийн протокол) сервер эхлүүлэх

Сонголтууд:
  -h, --help         тусламж харуулах                                                        [логик]
  -v, --version      хувилбарын дугаар харуулах                                              [логик]
      --print-logs   логийг стандарт алдааны урсгал руу хэвлэх                               [логик]
      --log-level    логийн түвшин            [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад нэмэлтгүй ажиллуулах                                             [логик]
      --port         сонсох порт                                                  [тоо] [анхдагч: 0]
      --hostname     сонсох хостын нэр                                [текст] [анхдагч: "127.0.0.1"]
      --mdns         mDNS үйлчилгээг илрүүлэхийг идэвхжүүлэх (хостын нэрийг заагаагүй бол 0.0.0.0
                     ашиглана)                                              [логик] [анхдагч: false]
      --mdns-domain  mDNS үйлчилгээний өөрийн домэйн нэр (анхдагч: mongolgpt.local)
                                                                [текст] [анхдагч: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт домэйнүүд                      [жагсаалт] [анхдагч: []]
      --cwd          ажлын хавтас [текст] [анхдагч: "<HOME>"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp --help 1`] = `
"mongolgpt mcp

MCP (загварын контекстийн протокол) серверүүдийг удирдах

Командууд:
  mongolgpt mcp add [name]     MCP сервер нэмэх
  mongolgpt mcp list           MCP серверүүд болон төлөвийг жагсаах                    [өөр нэр: ls]
  mongolgpt mcp auth [name]    OAuth идэвхтэй MCP серверт нэвтрэх
  mongolgpt mcp logout [name]  MCP серверийн OAuth нэвтрэх мэдээллийг устгах
  mongolgpt mcp debug <name>   MCP серверийн OAuth холболтыг оношлох

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt attach --help 1`] = `
"mongolgpt attach <url>

ажиллаж буй MongolGPT серверт холбогдох

Байрлалын аргументууд:
  url  http://localhost:4096                                                        [текст] [заавал]

Сонголтууд:
  -h, --help          тусламж харуулах                                                       [логик]
  -v, --version       хувилбарын дугаар харуулах                                             [логик]
      --print-logs    логийг стандарт алдааны урсгал руу хэвлэх                              [логик]
      --log-level     логийн түвшин           [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          гадаад нэмэлтгүй ажиллуулах                                            [логик]
      --dir           ажиллуулах хавтас                                                      [текст]
  -c, --continue      сүүлийн сешнийг үргэлжлүүлэх                                           [логик]
  -s, --session       үргэлжлүүлэх сешний ID                                                 [текст]
      --fork          үргэлжлүүлэхдээ сешнийг салаалуулах (--continue эсвэл --session-тэй ашиглана)
                                                                                             [логик]
  -p, --password      үндсэн баталгаажуулалтын нууц үг (анхдагч нь MONGOLGPT_SERVER_PASSWORD)[текст]
  -u, --username      үндсэн баталгаажуулалтын хэрэглэгчийн нэр (анхдагч нь
                      MONGOLGPT_SERVER_USERNAME эсвэл 'mongolgpt')                           [текст]
      --mini          жижиг интерактив интерфэйс эхлүүлэх                   [логик] [анхдагч: false]
      --no-replay     үргэлжлүүлэлт болон цонхны хэмжээ өөрчлөгдсөний дараа жижиг сешний түүхийг
                      дахин харуулахгүй                                                      [логик]
      --replay-limit  жижиг горимд дахин харуулах түүхийг хамгийн шинэ N мессежээр хязгаарлах  [тоо]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt run --help 1`] = `
"mongolgpt run [message..]

мессежтэйгээр MongolGPT ажиллуулах

Байрлалын аргументууд:
  message  илгээх мессеж                                                    [жагсаалт] [анхдагч: []]

Сонголтууд:
  -h, --help                          тусламж харуулах                                       [логик]
  -v, --version                       хувилбарын дугаар харуулах                             [логик]
      --print-logs                    логийг стандарт алдааны урсгал руу хэвлэх              [логик]
      --log-level                     логийн түвшин
                                              [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          гадаад нэмэлтгүй ажиллуулах                            [логик]
      --command                       ажиллуулах команд; аргументэд message ашиглана         [текст]
  -c, --continue                      сүүлийн сешнийг үргэлжлүүлэх                           [логик]
  -s, --session                       үргэлжлүүлэх сешний ID                                 [текст]
      --fork                          үргэлжлүүлэхээс өмнө сешнийг салбарлан үргэлжлүүлэх
                                      (--continue эсвэл --session шаардлагатай)              [логик]
      --share                         сешнийг хуваалцах                                      [логик]
  -m, --model                         ашиглах загвар, үйлчилгээ үзүүлэгч/загварын хэлбэрээр өгнө
                                                                                             [текст]
      --agent                         ашиглах агент                                          [текст]
      --format                        гаралтын хэлбэр: default (форматласан) эсвэл json (түүхий JSON
                                      үйл явдал)
                                        [текст] [сонголтууд: "default", "json"] [анхдагч: "default"]
  -f, --file                          мессежид хавсаргах файл(ууд)                        [жагсаалт]
      --title                         сешний гарчиг (утга өгөөгүй бол богиносгосон заавар ашиглана)
                                                                                             [текст]
      --attach                        ажиллаж буй MongolGPT серверт холбогдох (жишээ:
                                      http://localhost:4096)                                 [текст]
  -p, --password                      үндсэн баталгаажуулалтын нууц үг (анхдагч нь
                                      MONGOLGPT_SERVER_PASSWORD)                             [текст]
  -u, --username                      үндсэн баталгаажуулалтын хэрэглэгчийн нэр (анхдагч нь
                                      MONGOLGPT_SERVER_USERNAME эсвэл 'mongolgpt')           [текст]
      --dir                           ажиллуулах хавтас; алсын серверт холбогдсон бол сервер дээрх
                                      зам                                                    [текст]
      --port                          локал серверийн порт (утга өгөөгүй бол санамсаргүй порт
                                      ашиглана)                                                [тоо]
      --variant                       загварын хувилбар (үйлчилгээ үзүүлэгчээс хамаарах бодолтын
                                      түвшин, жишээ: high, max, minimal)                     [текст]
      --thinking                      бодох явцын хэсгүүдийг харуулах                        [логик]
      --dangerously-skip-permissions  шууд хориглоогүй зөвшөөрлүүдийг автоматаар олгох (аюултай!)
                                                                            [логик] [анхдагч: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt debug --help 1`] = `
"mongolgpt debug

алдаа оношлох хэрэгслүүд

Командууд:
  mongolgpt debug config        шийдэгдсэн тохиргоог харуулах
  mongolgpt debug lsp           LSP оношилгооны хэрэгслүүд
  mongolgpt debug rg            ripgrep оношилгооны хэрэгслүүд
  mongolgpt debug file          файлын систем оношлох хэрэгслүүд
  mongolgpt debug scrap         мэдэгдэж буй бүх төслийг жагсаах
  mongolgpt debug skill         боломжтой бүх ур чадварыг жагсаах
  mongolgpt debug snapshot      агшин зургийг оношлох хэрэгслүүд
  mongolgpt debug startup       эхлэлийн хугацааг хэвлэх
  mongolgpt debug agent <name>  агентийн тохиргооны дэлгэрэнгүйг харуулах
  mongolgpt debug v2            v2 каталог болон суурилуулсан нэмэлтүүдийг оношлох
  mongolgpt debug info          оношилгооны мэдээлэл харуулах
  mongolgpt debug paths         нийтлэг замуудыг харуулах (өгөгдөл, тохиргоо, түр хадгалалт, төлөв)
  mongolgpt debug wait          хязгааргүй хүлээх (алдаа оношлоход)

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt account --help 1`] = `
"mongolgpt account

MongolGPT бүртгэл, багц болон ажлын орчныг удирдах

Командууд:
  mongolgpt account login [url]     удирдлагын самбарт нэвтрэх
  mongolgpt account logout [email]  удирдлагын самбараас гарах
  mongolgpt account switch          идэвхтэй байгууллага солих
  mongolgpt account orgs            байгууллагуудыг жагсаах
  mongolgpt account open            идэвхтэй бүртгэлийн удирдлагын самбарыг нээх
  mongolgpt account status          багц, хэрэглээний хязгаар болон зарцуулалтыг харах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers --help 1`] = `
"mongolgpt providers

AI үйлчилгээ үзүүлэгч болон нэвтрэх мэдээллийг удирдах

Командууд:
  mongolgpt providers list               үйлчилгээ үзүүлэгч болон итгэмжлэлүүдийг жагсаах
                                                                                       [өөр нэр: ls]
  mongolgpt providers login [url]        үйлчилгээ үзүүлэгчид нэвтрэх
  mongolgpt providers logout [provider]  тохируулсан үйлчилгээ үзүүлэгчээс гарах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent --help 1`] = `
"mongolgpt agent

агентуудыг удирдах

Командууд:
  mongolgpt agent create  шинэ агент үүсгэх
  mongolgpt agent list    боломжтой бүх агентыг жагсаах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt upgrade --help 1`] = `
"mongolgpt upgrade [target]

MongolGPT-ийг хамгийн сүүлийн эсвэл тодорхой хувилбар руу шинэчлэх

Байрлалын аргументууд:
  target  шинэчлэх хувилбар, жишээ нь '0.1.48' эсвэл 'v0.1.48'                               [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
  -m, --method      ашиглах суулгалтын арга
                        [текст] [сонголтууд: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt uninstall --help 1`] = `
"mongolgpt uninstall

MongolGPT-ийг устгаж, холбоотой файлуудыг цэвэрлэх

Сонголтууд:
  -h, --help         тусламж харуулах                                                        [логик]
  -v, --version      хувилбарын дугаар харуулах                                              [логик]
      --print-logs   логийг стандарт алдааны урсгал руу хэвлэх                               [логик]
      --log-level    логийн түвшин            [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад нэмэлтгүй ажиллуулах                                             [логик]
  -c, --keep-config  тохиргооны файлуудыг үлдээх                            [логик] [анхдагч: false]
  -d, --keep-data    сешний өгөгдөл болон агшин хуулбаруудыг үлдээх         [логик] [анхдагч: false]
      --dry-run      устгахгүйгээр юу устахыг урьдчилан харуулах            [логик] [анхдагч: false]
  -f, --force        баталгаажуулах асуултуудыг алгасах                     [логик] [анхдагч: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt serve --help 1`] = `
"mongolgpt serve

интерфэйсгүй MongolGPT сервер эхлүүлэх

Сонголтууд:
  -h, --help         тусламж харуулах                                                        [логик]
  -v, --version      хувилбарын дугаар харуулах                                              [логик]
      --print-logs   логийг стандарт алдааны урсгал руу хэвлэх                               [логик]
      --log-level    логийн түвшин            [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад нэмэлтгүй ажиллуулах                                             [логик]
      --port         сонсох порт                                                  [тоо] [анхдагч: 0]
      --hostname     сонсох хостын нэр                                [текст] [анхдагч: "127.0.0.1"]
      --mdns         mDNS үйлчилгээг илрүүлэхийг идэвхжүүлэх (хостын нэрийг заагаагүй бол 0.0.0.0
                     ашиглана)                                              [логик] [анхдагч: false]
      --mdns-domain  mDNS үйлчилгээний өөрийн домэйн нэр (анхдагч: mongolgpt.local)
                                                                [текст] [анхдагч: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт домэйнүүд                      [жагсаалт] [анхдагч: []]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt web --help 1`] = `
"mongolgpt web

MongolGPT сервер эхлүүлж вэб интерфэйс нээх

Сонголтууд:
  -h, --help         тусламж харуулах                                                        [логик]
  -v, --version      хувилбарын дугаар харуулах                                              [логик]
      --print-logs   логийг стандарт алдааны урсгал руу хэвлэх                               [логик]
      --log-level    логийн түвшин            [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         гадаад нэмэлтгүй ажиллуулах                                             [логик]
      --port         сонсох порт                                                  [тоо] [анхдагч: 0]
      --hostname     сонсох хостын нэр                                [текст] [анхдагч: "127.0.0.1"]
      --mdns         mDNS үйлчилгээг илрүүлэхийг идэвхжүүлэх (хостын нэрийг заагаагүй бол 0.0.0.0
                     ашиглана)                                              [логик] [анхдагч: false]
      --mdns-domain  mDNS үйлчилгээний өөрийн домэйн нэр (анхдагч: mongolgpt.local)
                                                                [текст] [анхдагч: "mongolgpt.local"]
      --cors         CORS-д зөвшөөрөх нэмэлт домэйнүүд                      [жагсаалт] [анхдагч: []]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt models --help 1`] = `
"mongolgpt models [provider]

боломжтой бүх загварыг жагсаах

Байрлалын аргументууд:
  provider  загвар шүүх үйлчилгээ үзүүлэгчийн ID                                             [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
      --verbose     загварын дэлгэрэнгүй гаралт ашиглах (өртөг зэрэг нэмэлт өгөгдөл орно)    [логик]
      --refresh     models.dev-ээс загварын түр хадгалсан өгөгдлийг шинэчлэх                 [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt stats --help 1`] = `
"mongolgpt stats

токены хэрэглээ болон өртгийн статистик харуулах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
      --days        сүүлийн N өдрийн статистик харуулах (анхдагч: бүх хугацаа)                 [тоо]
      --tools       харуулах хэрэгслийн тоо (анхдагч: бүгд)                                    [тоо]
      --models      загварын статистик харуулах (анхдагч: нуусан). Эхний N загварыг харуулах бол тоо
                    өгнө, үгүй бол бүгдийг харуулна
      --project     төслөөр шүүх (анхдагч: бүх төсөл, хоосон тэмдэгт мөр: одоогийн төсөл)    [текст]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt export --help 1`] = `
"mongolgpt export [sessionID]

сешний өгөгдлийг JSON хэлбэрээр экспортлох

Байрлалын аргументууд:
  sessionID  экспортлох сешний ID                                                            [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
      --sanitize    ярианы бичлэг болон файлын эмзэг өгөгдлийг нуух                          [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt import --help 1`] = `
"mongolgpt import <file>

сешний өгөгдлийг JSON файл эсвэл URL-аас импортлох

Байрлалын аргументууд:
  file  JSON файлын зам эсвэл хуваалцах URL                                         [текст] [заавал]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github --help 1`] = `
"mongolgpt github

GitHub агент удирдах

Командууд:
  mongolgpt github install  GitHub агент суулгах
  mongolgpt github run      GitHub агент ажиллуулах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt pr --help 1`] = `
"mongolgpt pr <number>

GitHub PR-ийн салбарыг татаж шалгаад MongolGPT ажиллуулах

Байрлалын аргументууд:
  number  шалгах PR дугаар                                                            [тоо] [заавал]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session --help 1`] = `
"mongolgpt session

сешнүүдийг удирдах

Командууд:
  mongolgpt session list                сешнүүдийг жагсаах
  mongolgpt session delete <sessionID>  сешн устгах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt plugin --help 1`] = `
"mongolgpt plugin <module>

нэмэлт суулгаж тохиргоог шинэчлэх

Байрлалын аргументууд:
  module  npm модулийн нэр                                                          [текст] [заавал]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
  -g, --global      глобал тохиргоонд суулгах                               [логик] [анхдагч: false]
  -f, --force       байгаа нэмэлтийн хувилбарыг солих                       [логик] [анхдагч: false]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt db --help 1`] = `
"mongolgpt db

өгөгдлийн сангийн хэрэгслүүд

Командууд:
  mongolgpt db [query]     sqlite3-ийн харилцан үйлдэлт бүрхүүл нээх эсвэл асуулга ажиллуулах
                                                                                           [анхдагч]
  mongolgpt db path        өгөгдлийн сангийн замыг хэвлэх

Байрлалын аргументууд:
  query  ажиллуулах SQL асуулга                                                              [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
      --format      гаралтын формат             [текст] [сонголтууд: "json", "tsv"] [анхдагч: "tsv"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp list --help 1`] = `
"mongolgpt mcp list

MCP серверүүд болон төлөвийг жагсаах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp add --help 1`] = `
"mongolgpt mcp add [name]

MCP сервер нэмэх

Байрлалын аргументууд:
  name  MCP серверийн нэр                                                                    [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
      --url         алсын MCP серверийн URL                                                  [текст]
      --env         локал MCP серверийн орчны хувьсагч (KEY=VALUE)                        [жагсаалт]
      --header      алсын MCP серверийн HTTP толгой мэдээлэл (KEY=VALUE)                  [жагсаалт]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp auth --help 1`] = `
"mongolgpt mcp auth [name]

OAuth идэвхтэй MCP серверт нэвтрэх

Командууд:
  mongolgpt mcp auth list  OAuth боломжтой MCP серверүүд болон нэвтрэлтийн төлөвийг жагсаах
                                                                                       [өөр нэр: ls]

Байрлалын аргументууд:
  name  MCP серверийн нэр                                                                    [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt mcp logout --help 1`] = `
"mongolgpt mcp logout [name]

MCP серверийн OAuth нэвтрэх мэдээллийг устгах

Байрлалын аргументууд:
  name  MCP серверийн нэр                                                                    [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt account login --help 1`] = `
"mongolgpt account login [url]

удирдлагын самбарт нэвтрэх

Байрлалын аргументууд:
  url  серверийн URL                                      [текст] [анхдагч: "http://localhost:3000"]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt account status --help 1`] = `
"mongolgpt account status

багц, хэрэглээний хязгаар болон зарцуулалтыг харах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt console --help 1`] = `
"mongolgpt account

MongolGPT бүртгэл, багц болон ажлын орчныг удирдах

Командууд:
  mongolgpt console login [url]     удирдлагын самбарт нэвтрэх
  mongolgpt console logout [email]  удирдлагын самбараас гарах
  mongolgpt console switch          идэвхтэй байгууллага солих
  mongolgpt console orgs            байгууллагуудыг жагсаах
  mongolgpt console open            идэвхтэй бүртгэлийн удирдлагын самбарыг нээх
  mongolgpt console status          багц, хэрэглээний хязгаар болон зарцуулалтыг харах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers list --help 1`] = `
"mongolgpt providers list

үйлчилгээ үзүүлэгч болон итгэмжлэлүүдийг жагсаах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers login --help 1`] = `
"mongolgpt providers login [url]

үйлчилгээ үзүүлэгчид нэвтрэх

Байрлалын аргументууд:
  url  MongolGPT-ийн нэвтрэх үйлчилгээ үзүүлэгч                                              [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
  -p, --provider    нэвтрэх үйлчилгээ үзүүлэгчийн ID эсвэл нэр (сонголтыг алгасна)           [текст]
  -m, --method      нэвтрэх аргын нэр (арга сонголтыг алгасна)                               [текст]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt providers logout --help 1`] = `
"mongolgpt providers logout [provider]

тохируулсан үйлчилгээ үзүүлэгчээс гарах

Байрлалын аргументууд:
  provider  гарах үйлчилгээ үзүүлэгчийн ID эсвэл нэр                                         [текст]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent create --help 1`] = `
"mongolgpt agent create

шинэ агент үүсгэх

Сонголтууд:
  -h, --help                  тусламж харуулах                                               [логик]
  -v, --version               хувилбарын дугаар харуулах                                     [логик]
      --print-logs            логийг стандарт алдааны урсгал руу хэвлэх                      [логик]
      --log-level             логийн түвшин   [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  гадаад нэмэлтгүй ажиллуулах                                    [логик]
      --path                  агентийн файл үүсгэх хавтасны зам                              [текст]
      --description           агент юу хийх ёстойг тайлбарлах                                [текст]
      --mode                  агентийн горим      [текст] [сонголтууд: "all", "primary", "subagent"]
      --permissions, --tools  зөвшөөрлүүдийг таслалаар тусгаарласан жагсаалт (анхдагч: бүгд).
                              Боломжтой: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                         [текст]
  -m, --model                 ашиглах загвар, үйлчилгээ үзүүлэгч/загварын хэлбэртэй          [текст]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt agent list --help 1`] = `
"mongolgpt agent list

боломжтой бүх агентыг жагсаах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session list --help 1`] = `
"mongolgpt session list

сешнүүдийг жагсаах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
  -n, --max-count   хамгийн сүүлийн N сешнээр хязгаарлах                                       [тоо]
      --format      гаралтын формат         [текст] [сонголтууд: "table", "json"] [анхдагч: "table"]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt session delete --help 1`] = `
"mongolgpt session delete <sessionID>

сешн устгах

Байрлалын аргументууд:
  sessionID  устгах сешний ID                                                       [текст] [заавал]

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github install --help 1`] = `
"mongolgpt github install

GitHub агент суулгах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt github run --help 1`] = `
"mongolgpt github run

GitHub агент ажиллуулах

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]
      --event       агент ажиллуулах GitHub-ийн туршилтын үйл явдал                          [текст]
      --token       GitHub-ийн хувийн хандалтын токен (github_pat_********)                  [текст]"
`;

exports[`mongolgpt CLI help-text snapshots every documented command emits stable help text: mongolgpt db path --help 1`] = `
"mongolgpt db path

өгөгдлийн сангийн замыг хэвлэх

Сонголтууд:
  -h, --help        тусламж харуулах                                                         [логик]
  -v, --version     хувилбарын дугаар харуулах                                               [логик]
      --print-logs  логийг стандарт алдааны урсгал руу хэвлэх                                [логик]
      --log-level   логийн түвшин             [текст] [сонголтууд: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        гадаад нэмэлтгүй ажиллуулах                                              [логик]"
`;
